@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Dec 2010; Aleksey Samoukin <as@calculate.ru>
+  cds-meta-11.0.ebuild:
+  Replaced calculate-ejabberd to ejabberd
+
 *cds-meta-10.999 (18 Nov 2010)
 
   18 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
